@@ -5,3 +5,4 @@ README
 UserAgent.pm
 t/01basic.t
 t/02multi.t
+t/03chunks.t
