@@ -1,8 +1,8 @@
 POE::Component::Client::UserAgent
 ---------------------------------
 
-POE::Component::Client::UserAgent is Copyright 2001 Kirill Shuykin
-Author's contact: http://www.en-directo.net/mail/kirill.html
+POE::Component::Client::UserAgent is
+Copyright 2001-2002 Rocco Caputo <troc+pcua@pobox.com>
 
 This library is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
@@ -18,47 +18,54 @@ for a response, and it lets several requests run in parallel.
 Requirements
 ------------
 
-This module requires POE, LWP and LWP::Parallel. Version 0.03 of the
-component requires POE version 0.1402 and LWP::Parallel version 2.51,
-which in turn requires LWP version 2.52 or later.
+This module requires POE, LWP and LWP::Parallel. The component
+requires POE version 0.1402 and LWP::Parallel version 2.51,
+which in turn requires LWP version 2.52 or 2.53.
 
 Availability
 ------------
 
-The most recent POE::Component::Client::UserAgent distribution
-is available on the web at http://www.en-directo.net/poe/
+The most recent POE::Component::Client::UserAgent version
+is available on CPAN:
 
-I am also planning to upload it to the CPAN.
-
-The most recent version of the component documentation is available
-at http://www.en-directo.net/poe/useragent.html
+http://search.cpan.org/search?dist=POE-Component-Client-UserAgent
 
 Installation
 ------------
-
-This module has not yet been posted on CPAN, so manual installation
-is the only option so far.
 
 Create a makefile:
 
   perl Makefile.PL
 
-Optionally run test scripts:
-
-  make test
-
 Install the module:
 
   make install
 
+Alternatively you can install the component using CPAN shell.
+
 You can also extract the archive manually. The component is written
 entirely in Perl and requires no compilation.
+
+Testing
+-------
+
+Run all test scripts:
+
+  make test
+
+If any of the test scripts fails, please run the script like so:
+
+  perl 00test.t 9
+
+where 00test.t is the name of the script that fails and the number
+9 is the debug level. This will create a file with the same name
+as the script and a .log extension. Then send the .log file to the
+component author.
 
 Usage
 -----
 
-An example of usage is found in the built in documentation, as well
-as on the manual page on the web, see Availability.
+An example of usage is found in the built in POD documentation.
 
 Test scripts are also good examples of the component usage.
 
