@@ -1,6 +1,11 @@
 Revision history for POE::Component::Client::UserAgent
 ======================================================
 
+POE::Component::Client::UserAgent 0.04
+2002-01-03
+	- bug fix in _pococ_ua_postback
+	- added 03chunks.t
+
 POE::Component::Client::UserAgent 0.03
 2001-06-07
 	- timeout handling added
